2004-12-01  Nathanael Nerode  <neroden@gcc.gnu.org>

	PR preprocessor/17651
	* c-opts.c (sanitize_cpp_opts): Make flag_no_output imply
	flag_no_line_commands.
	* c-ppoutput.c (pp_file_change): Remove now-redundant check of
	flag_no_output.

	PR preprocessor/17610 
	* directives.c (do_include_common): Error out if an empty filename
	is given for #include (or #include_next or #import).
	PR preprocessor/17610
	* testsuite/gcc.dg/cpp/empty-include.c: New testcase.

2004-12-02  Alan Modra  <amodra@bigpond.net.au>

	PR target/16952
	* config/rs6000/rs6000.c (rs6000_assemble_integer): Replace
	#ifdef RELOCATABLE_NEEDS_FIXUP with if.
	* config/rs6000/linux.h (RELOCATABLE_NEEDS_FIXUP): Define in terms
	of target_flags_explicit.
	* config/rs6000/linux64.h (RELOCATABLE_NEEDS_FIXUP): Ditto for biarch
	case.  Define as 0 for non-biarch.

2004-12-01  Richard Henderson  <rth@redhat.com>

        * expr.c (optimize_bitfield_assignment_op): Split out from ...
        (expand_assignment): ... here.  Use handled_component_p to gate
        get_inner_reference code.  Simplify MEM handling.  Special case
        CONCAT destinations.
        (get_inner_reference): Handle REAL/IMAGPART_EXPR.
        (handled_component_p): Likewise.

2004-12-01  Alan Modra  <amodra@bigpond.net.au>

	PR target/12817
	* config/rs6000/rs6000.c (rs6000_emit_prologue): Use r0 for vrsave.

2004-11-30  Jakub Jelinek  <jakub@redhat.com>

	* fold-const.c (extract_muldiv_1) <case ABS_EXPR>: If ctype is
	unsigned and type signed, build ABS_EXPR with signed_type (ctype)
	and only afterwards convert to ctype.

2004-11-29  Richard Henderson  <rth@redhat.com>

	PR target/17224
	* config/ia64/ia64.c (sdata_symbolic_operand): Deny offsets
	outside the referenced object.

2004-11-28  Andreas Fischer <a_fisch@gmx.de>
	    Alan Modra  <amodra@bigpond.net.au>

	PR target/16343
	* config/rs6000/rs6000.c (rs6000_elf_in_small_data_p): Disallow
	functions, strings and thread-local vars.
